<resources>
    <string name="app_name">ProjectKelas</string>
    <string name="create_a_new_account">Create a new account </string>
    <string name="sign_up">Sign Up</string>
    <string name="login">LOGIN</string>
    <string name="passowrd">  Passowrd</string>
    <string name="email">  Email</string>
    <string name="tiket_ku">Tiket-KU</string>
    <string name="ku">-KU</string>
    <string name="tiket">tiket</string>
    <string name="last_name">  Last Name</string>
    <string name="first_name">  First Name</string>
    <string name="mobile_number">  Mobile Number</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="musik">Musk</string>
    <string name="seni">Seni</string>
    <string name="workshop">Workshop</string>
    <string name="talkshow">Talkshow</string>
    <string name="fashion">Fashion</string>
    <string name="bazaar">Bazaar</string>

</resources>
