<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#049E08"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tiket_ku"
        android:layout_marginTop="140dp"
        android:textSize="40sp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/edt_email_login"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@drawable/rounded_edit_text"
        android:layout_marginTop="90dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:textSize="16sp"
        android:hint="@string/email"/>

    <EditText
        android:id="@+id/edt_password_login"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@drawable/rounded_edit_text"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:textSize="16sp"
        android:inputType="textPassword"
        android:hint="@string/passowrd"/>

    <Button
        android:id="@+id/btn_login_login"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:text="@string/login"
        android:background="@drawable/rounded_button"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:enabled="false"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/create_a_new_account"/>

        <TextView
            android:id="@+id/btn_signUp_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#2196F3"
            android:layout_marginLeft="4dp"
            android:textSize="18sp"
            android:text="@string/sign_up"/>

    </LinearLayout>
    

</LinearLayout>