<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#049E08"
    tools:context=".HomeActivity">

    <TextView
        android:layout_marginTop="22dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:text="HOT EVENTS"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        />

    <ViewFlipper
        android:id="@+id/img_flipper"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Event : "
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:layout_marginTop="18dp"
        android:layout_marginLeft="20dp"/>
    
    <GridLayout
        android:columnCount="3"
        android:rowCount="2"

        android:layout_margin="3dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="20dp"
        android:background="@drawable/rounded_list_view"

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- ROW 1 -->
        <!-- COLUMN 1-->
        <LinearLayout
            android:id="@+id/btn_musik"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_width="120dp"
            android:layout_height="120dp">

            <ImageView
                android:layout_gravity="center"
                android:src="@drawable/banner3"
                android:layout_width="90dp"
                android:layout_height="90dp"/>

            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/musik"
                android:textColor="#FFFFFF"
                android:textSize="20sp"/>

        </LinearLayout>

        <!-- ROW 1 -->
        <!-- COLUMN 2-->
        <LinearLayout
            android:id="@+id/btn_seni"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_width="120dp"
            android:layout_height="120dp">

            <ImageView
                android:layout_gravity="center"
                android:src="@drawable/banner3"
                android:layout_width="90dp"
                android:layout_height="90dp"/>

            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seni"
                android:textColor="#FFFFFF"
                android:textSize="20sp"/>

        </LinearLayout>

        <!-- ROW 1 -->
        <!-- COLUMN 2-->
        <LinearLayout
            android:id="@+id/btn_workshop"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_width="120dp"
            android:layout_height="120dp">

            <ImageView
                android:layout_gravity="center"
                android:src="@drawable/banner3"
                android:layout_width="90dp"
                android:layout_height="90dp"/>

            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/workshop"
                android:textColor="#FFFFFF"
                android:textSize="20sp"/>

        </LinearLayout>

        <!-- ROW 2 -->
        <!-- COLUMN 1-->
        <LinearLayout
            android:id="@+id/btn_talkshow"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_width="120dp"
            android:layout_height="120dp">

            <ImageView
                android:layout_gravity="center"
                android:src="@drawable/banner3"
                android:layout_width="90dp"
                android:layout_height="90dp"/>

            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/talkshow"
                android:textColor="#FFFFFF"
                android:textSize="20sp"/>

        </LinearLayout>

        <!-- ROW 2 -->
        <!-- COLUMN 2-->
        <LinearLayout
            android:id="@+id/btn_fashion"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_width="120dp"
            android:layout_height="120dp">

            <ImageView
                android:layout_gravity="center"
                android:src="@drawable/banner3"
                android:layout_width="90dp"
                android:layout_height="90dp"/>

            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fashion"
                android:textColor="#FFFFFF"
                android:textSize="20sp"/>

        </LinearLayout>

        <!-- ROW 2 -->
        <!-- COLUMN 3-->
        <LinearLayout
            android:id="@+id/btn_bazzar"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_width="120dp"
            android:layout_height="120dp">

            <ImageView
                android:layout_gravity="center"
                android:src="@drawable/banner3"
                android:layout_width="90dp"
                android:layout_height="90dp"/>

            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bazaar"
                android:textColor="#FFFFFF"
                android:textSize="20sp"/>

        </LinearLayout>


    </GridLayout>

</LinearLayout>